--- a/shop.html
+++ b/shop.html
@@ -126,11 +126,14 @@
                         <li class="flex justify-between items-center gap-3">
                             <a href="#"><img src="images/bars.svg" alt=""></a>
                         </li>
-                        <li><a href="" class="rounded py-1 px-2 hover:bg-bgmenu hidden lg:block">Home</a></li>
-                        <li><a href="" class="rounded py-1 px-2 hover:bg-bgmenu hidden lg:block">Shop</a></li>
-                        <li><a href="" class="rounded py-1 px-2 hover:bg-bgmenu hidden lg:block">Our story</a></li>
-                        <li><a href="" class="rounded py-1 px-2 bg-bgmenu hover:bg-bgmenu hidden lg:block">Blog</a></li>
-                        <li><a href="" class="rounded py-1 px-2 hover:bg-bgmenu hidden lg:block">Help</a></li>
+                        <li><a href="home.html" class="rounded py-1 px-2 hover:bg-bgmenu hidden lg:block">Home</a></li>
+                        <li><a href="shop.html"
+                                class="rounded py-1 px-2 bg-bgmenu hover:bg-bgmenu hidden lg:block">Shop</a></li>
+                        <li><a href="#" class="rounded py-1 px-2 hover:bg-bgmenu hidden lg:block">Our story</a></li>
+                        <li><a href="product.html" class="rounded py-1 px-2 hover:bg-bgmenu hidden lg:block">Product</a>
+                        </li>
+                        <li><a href="contact.html" class="rounded py-1 px-2 hover:bg-bgmenu hidden lg:block">Contact</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="menu-middle">
@@ -138,9 +141,9 @@
                 </div>
                 <div class="menu-right">
                     <ul class="mainmenu flex justify-between text-[13px] items-center gap-6">
-                        <li><a href="" class="rounded py-1 px-2 hover:bg-bgmenu hidden md:block">Social</a></li>
-                        <li><a href="" class="rounded py-1 px-2 hover:bg-bgmenu hidden md:block">Search</a></li>
-                        <li><a href="" class="rounded py-1 px-2 hover:bg-bgmenu hidden md:block">Wishlist</a></li>
+                        <li><a href="#" class="rounded py-1 px-2 hover:bg-bgmenu hidden md:block">Social</a></li>
+                        <li><a href="#" class="rounded py-1 px-2 hover:bg-bgmenu hidden md:block">Search</a></li>
+                        <li><a href="#" class="rounded py-1 px-2 hover:bg-bgmenu hidden md:block">Wishlist</a></li>
                         <li>
                             <select name="currency" id=""
                                 class="bg-transparent focus:outline-none text-[13px] hidden md:block">
@@ -150,8 +153,7 @@
                             </select>
                         </li>
                         <li>
-                            <a href=""
-                                class="rounded py-1 px-3 border-0 md:border-r md:border-l border-l-[#e2e2e2] border-r-[#e2e2e2]">
+                            <a href="" class="rounded py-1 px-3">
                                 <img src="images/user.svg" alt="">
                             </a>
                         </li>
@@ -177,8 +179,10 @@
         <!-- Shop All -->
         <section class="shop-products mt-11 md:mt-11 px-8 md:px-12">
             <div class="shop-product-head flex flex-col md:flex-row justify-between mb-3 md:mb-6 gap-8 relative">
-                <h2 class="text-[42px] font-bold leading-[40px]">Shop All <span class="text-[9px] absolute -top-5">30</span></h2>
-                <div class="flex justify-start md:justify-between items-center space-x-5 md:space-x-3 text-[#454545] text-xs">
+                <h2 class="text-[42px] font-bold leading-[40px]">Shop All <span
+                        class="text-[9px] absolute -top-5">30</span></h2>
+                <div
+                    class="flex justify-start md:justify-between items-center space-x-5 md:space-x-3 text-[#454545] text-xs">
                     <img src="images/home-grid.svg" alt="" class="w-3 h-3">
                     <a href="">Home</a>
                     <svg xmlns="http://www.w3.org/2000/svg" height="12" width="8.75" viewBox="0 0 320 512">
@@ -196,8 +200,10 @@
 
             <div class="category-wrap mb-9">
                 <!-- <div class="category-bottom mt-14 flex justify-start lg:justify-between flex-wrap gap-y-5 gap-x-5"> -->
-                <div class="category-bottom mt-14 grid grid-cols-3 md:grid-cols-4 lg:grid-cols-8 justify-start lg:justify-between gap-y-5 gap-x-5 text-center">
-                    <div class="cat-item flex flex-col items-center border border-[#e8e8e8] rounded-lg justify-center gap-4">
+                <div
+                    class="category-bottom mt-14 grid grid-cols-3 md:grid-cols-4 lg:grid-cols-8 justify-start lg:justify-between gap-y-5 gap-x-5 text-center">
+                    <div
+                        class="cat-item flex flex-col items-center border border-[#e8e8e8] rounded-lg justify-center gap-4">
                         <div>
                             <a href="" class="text-sm">View All</a>
                         </div>
@@ -1123,7 +1129,9 @@
         <div class="tag px-14 w-full md:w-4/5 pt-14">
 
             <h4 class="font-semibold font-xl mb-5">Categories</h4>
-            <p class="text-black text-opacity-70">Lorem ipsum, dolor sit, amet consectetur, adipisicing elit, Iste incidunt, deserunt, cupiditate harum, nostrum ea, velit maxime nisi, minima laudantium, Iure, architecto odio, Temporibus repellendus, architecto repellat, quidem quia, tempora.</p>
+            <p class="text-black text-opacity-70">Lorem ipsum, dolor sit, amet consectetur, adipisicing elit, Iste
+                incidunt, deserunt, cupiditate harum, nostrum ea, velit maxime nisi, minima laudantium, Iure, architecto
+                odio, Temporibus repellendus, architecto repellat, quidem quia, tempora.</p>
 
         </div>
 
